resolve 476. Add overflow to allow scroll (#482) (#483)

--- a/frontend/src/components/viewMembers/SuggestionBox.module.css
+++ b/frontend/src/components/viewMembers/SuggestionBox.module.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
     border-radius: 0px 0px 4px 4px;
     z-index: 100;
+    overflow-y: scroll;
 }
 
 .suggestion-box .hidden {
